fix: expose external id only
