# openapi/mgmt/openapi.bundle.json
@@ -49,18 +49,16 @@
                   "Example": {
                     "value": [
                       {
-                        "id": "7393b5a4-5e20-4648-87af-b7b297793fd1",
+                        "external_identifier": "your-customers-unique-application-id",
                         "application_id": "d8ceb3ff-8b7f-4fa7-b8de-849292f6ca69",
                         "name": "MyCompany Inc",
-                        "email": "contact@mycompany.com",
-                        "external_identifier": "your-customers-unique-application-id"
+                        "email": "contact@mycompany.com"
                       },
                       {
-                        "id": "e888cedf-e9d0-42c5-9485-2d72984faef6",
+                        "external_identifier": "your-other-customers-unique-application-id2",
                         "application_id": "d8ceb3ff-8b7f-4fa7-b8de-849292f6ca69",
                         "name": "TheirCompany Inc",
-                        "email": "contact@theircompany.com",
-                        "external_identifier": "your-other-customers-unique-application-id"
+                        "email": "contact@theircompany.com"
                       }
                     ]
                   }
@@ -129,7 +127,6 @@
                 "examples": {
                   "Example": {
                     "value": {
-                      "id": "0258cbc6-6020-430a-848e-aafacbadf4ae",
                       "application_id": "d8ceb3ff-8b7f-4fa7-b8de-849292f6ca69",
                       "name": "MyCompany Inc",
                       "email": "contact@mycompany.com",
@@ -164,7 +161,6 @@
                 "examples": {
                   "Example": {
                     "value": {
-                      "id": "0258cbc6-6020-430a-848e-aafacbadf4af",
                       "application_id": "d8ceb3ff-8b7f-4fa7-b8de-849292f6ca69",
                       "name": "MyCompany Inc",
                       "email": "contact@mycompany.com",
@@ -179,12 +175,12 @@
       },
       "parameters": [
         {
-          "name": "customer_id",
+          "name": "external_id",
           "in": "path",
           "required": true,
           "schema": {
             "type": "string",
-            "example": "0258cbc6-6020-430a-848e-aafacbadf4ae"
+            "example": "your-customers-unique-application-id"
           }
         }
       ]
@@ -762,10 +758,6 @@
       "customer": {
         "type": "object",
         "properties": {
-          "id": {
-            "type": "string",
-            "example": "e888cedf-e9d0-42c5-9485-2d72984faef2"
-          },
           "application_id": {
             "type": "string",
             "example": "d8ceb3ff-8b7f-4fa7-b8de-849292f6ca69"
@@ -790,7 +782,6 @@
           }
         },
         "required": [
-          "id",
           "application_id",
           "name",
           "email",
